@@ -655,8 +655,8 @@ public class OutputModuleDialog extends JDialog
 			 .add(jCheckBoxKeepTriggerEvent)
 			 .addPreferredGap(org.jdesktop.layout.LayoutStyle.RELATED)
 			 .add(jCheckBoxKeepTriggerEventWithRefs)))
-						  .addPreferredGap(org.jdesktop.layout.LayoutStyle.RELATED, 15, Short.MAX_VALUE)
-						  .add(jScrollPaneModules, org.jdesktop.layout.GroupLayout.PREFERRED_SIZE, 512, org.jdesktop.layout.GroupLayout.PREFERRED_SIZE))
+						  .add(15, 15, 15)
+						  .add(jScrollPaneModules, org.jdesktop.layout.GroupLayout.DEFAULT_SIZE, 512, Short.MAX_VALUE))
 					     );
 	
         jSplitPane.setRightComponent(jPanelModules);
@@ -715,163 +715,6 @@ public class OutputModuleDialog extends JDialog
 
 
 }    
-    /*
-      jSplitPane.setDividerLocation(260);
-      jSplitPane.setResizeWeight(0.5);
-      
-      jComboBoxAddPaths.setEditable(true);
-      jScrollPanePaths.setViewportView(jListPaths);
-      
-      jLabel5.setFont(new java.awt.Font("Dialog", 1, 16));
-      jLabel5.setText("Selected Paths:");
-      
-      org.jdesktop.layout.GroupLayout jPanelPathsLayout = new org.jdesktop.layout.GroupLayout(jPanelPaths);
-      jPanelPaths.setLayout(jPanelPathsLayout);
-      jPanelPathsLayout.setHorizontalGroup(
-      jPanelPathsLayout.createParallelGroup(org.jdesktop.layout.GroupLayout.LEADING)
-      .add(jPanelPathsLayout.createSequentialGroup()
-      .add(jLabel5)
-      .addContainerGap())
-      .add(jPanelPathsLayout.createSequentialGroup()
-      .addContainerGap()
-      .add(jComboBoxAddPaths, 0, 235, Short.MAX_VALUE)
-      .addContainerGap())
-      .add(jScrollPanePaths, org.jdesktop.layout.GroupLayout.DEFAULT_SIZE, 259, Short.MAX_VALUE)
-      );
-      jPanelPathsLayout.setVerticalGroup(
-      jPanelPathsLayout.createParallelGroup(org.jdesktop.layout.GroupLayout.LEADING)
-      .add(jPanelPathsLayout.createSequentialGroup()
-      .addContainerGap()
-      .add(jLabel5)
-      .addPreferredGap(org.jdesktop.layout.LayoutStyle.RELATED)
-      .add(jComboBoxAddPaths, org.jdesktop.layout.GroupLayout.PREFERRED_SIZE, org.jdesktop.layout.GroupLayout.DEFAULT_SIZE, org.jdesktop.layout.GroupLayout.PREFERRED_SIZE)
-      .addPreferredGap(org.jdesktop.layout.LayoutStyle.RELATED)
-      .add(jScrollPanePaths, org.jdesktop.layout.GroupLayout.DEFAULT_SIZE, 553, Short.MAX_VALUE))
-      );
-      
-      jSplitPane.setLeftComponent(jPanelPaths);
-      
-      jTextFieldDrop.setText("*_hlt*_*_*");
-      
-      jLabel4.setFont(new java.awt.Font("Dialog", 1, 12));
-      jLabel4.setText("Drop:");
-      
-      jScrollPaneModules.setBackground(new java.awt.Color(255, 255, 255));
-      jScrollPaneModules.setViewportView(jTableProducts);
-      
-      jLabel6.setFont(new java.awt.Font("Dialog", 1, 16));
-      jLabel6.setText("Products:");
-      
-      jCheckBoxKeepRaw.setFont(new java.awt.Font("Dialog", 1, 12));
-      jCheckBoxKeepRaw.setSelected(true);
-      jCheckBoxKeepRaw.setText("keep FEDRawDataCollection");
-      
-      
-      jCheckBoxKeepTriggerEvent.setFont(new java.awt.Font("Dialog", 1, 12));
-      jCheckBoxKeepTriggerEvent.setSelected(true);
-      jCheckBoxKeepTriggerEvent.setText("keep triggerTriggerEvent");
-      jCheckBoxKeepTriggerEvent.setEnabled(false);
-      
-      jCheckBoxKeepTriggerResults.setFont(new java.awt.Font("Dialog", 1, 12));
-      jCheckBoxKeepTriggerResults.setSelected(true);
-      jCheckBoxKeepTriggerResults.setText("keep edmTriggerResults");
-      jCheckBoxKeepTriggerResults.setEnabled(false);
-      
-      org.jdesktop.layout.GroupLayout jPanelModulesLayout = new org.jdesktop.layout.GroupLayout(jPanelModules);
-      jPanelModules.setLayout(jPanelModulesLayout);
-      jPanelModulesLayout.setHorizontalGroup(
-      jPanelModulesLayout.createParallelGroup(org.jdesktop.layout.GroupLayout.LEADING)
-      .add(jScrollPaneModules, org.jdesktop.layout.GroupLayout.DEFAULT_SIZE, 665, Short.MAX_VALUE)
-      .add(org.jdesktop.layout.GroupLayout.TRAILING, jPanelModulesLayout.createSequentialGroup()
-      .add(jPanelModulesLayout.createParallelGroup(org.jdesktop.layout.GroupLayout.LEADING)
-      .add(jPanelModulesLayout.createSequentialGroup()
-      .add(6, 6, 6)
-      .add(jLabel4)
-      .addPreferredGap(org.jdesktop.layout.LayoutStyle.UNRELATED)
-      .add(jTextFieldDrop, org.jdesktop.layout.GroupLayout.DEFAULT_SIZE, 338, Short.MAX_VALUE)
-      .add(68, 68, 68))
-      .add(jPanelModulesLayout.createSequentialGroup()
-      .addContainerGap()
-      .add(jLabel6)
-      .addPreferredGap(org.jdesktop.layout.LayoutStyle.RELATED)))
-      .add(jPanelModulesLayout.createParallelGroup(org.jdesktop.layout.GroupLayout.LEADING)
-      .add(jCheckBoxKeepTriggerResults)
-      .add(jCheckBoxKeepTriggerEvent)
-      .add(jCheckBoxKeepRaw)))
-      );
-      jPanelModulesLayout.setVerticalGroup(
-      jPanelModulesLayout.createParallelGroup(org.jdesktop.layout.GroupLayout.LEADING)
-      .add(jPanelModulesLayout.createSequentialGroup()
-      .add(jPanelModulesLayout.createParallelGroup(org.jdesktop.layout.GroupLayout.LEADING)
-      .add(jPanelModulesLayout.createSequentialGroup()
-      .add(jCheckBoxKeepTriggerResults)
-      .addPreferredGap(org.jdesktop.layout.LayoutStyle.RELATED)
-      .add(jCheckBoxKeepTriggerEvent))
-      .add(jPanelModulesLayout.createSequentialGroup()
-      .addContainerGap()
-      .add(jLabel6)))
-      .add(2, 2, 2)
-      .add(jPanelModulesLayout.createParallelGroup(org.jdesktop.layout.GroupLayout.BASELINE)
-      .add(jLabel4)
-      .add(jCheckBoxKeepRaw)
-      .add(jTextFieldDrop, org.jdesktop.layout.GroupLayout.PREFERRED_SIZE, 23, org.jdesktop.layout.GroupLayout.PREFERRED_SIZE))
-      .addPreferredGap(org.jdesktop.layout.LayoutStyle.RELATED)
-      .add(jScrollPaneModules, org.jdesktop.layout.GroupLayout.DEFAULT_SIZE, 542, Short.MAX_VALUE))
-      );
-      
-      jSplitPane.setRightComponent(jPanelModules);
-      
-      jLabel1.setFont(new java.awt.Font("Dialog", 1, 12));
-      jLabel1.setText("OutputModule:");
-      
-      
-      jButtonCancel.setText("Cancel");
-      jButtonOK.setText("OK");
-      jButtonApply.setText("Apply");
-      
-      org.jdesktop.layout.GroupLayout layout = new org.jdesktop.layout.GroupLayout(jPanel);
-      jPanel.setLayout(layout);
-      layout.setHorizontalGroup(
-      layout.createParallelGroup(org.jdesktop.layout.GroupLayout.LEADING)
-      .add(org.jdesktop.layout.GroupLayout.TRAILING, layout.createSequentialGroup()
-      .addContainerGap()
-      .add(layout.createParallelGroup(org.jdesktop.layout.GroupLayout.TRAILING)
-      .add(org.jdesktop.layout.GroupLayout.LEADING, jSplitPane, org.jdesktop.layout.GroupLayout.DEFAULT_SIZE, 936, Short.MAX_VALUE)
-      .add(org.jdesktop.layout.GroupLayout.LEADING, layout.createSequentialGroup()
-      .add(jLabel1)
-      .addPreferredGap(org.jdesktop.layout.LayoutStyle.RELATED)
-      .add(jComboBoxOutputModule, 0, 831, Short.MAX_VALUE))
-      .add(layout.createSequentialGroup()
-      .add(jButtonCancel)
-      .addPreferredGap(org.jdesktop.layout.LayoutStyle.RELATED)
-      .add(jButtonApply)
-      .addPreferredGap(org.jdesktop.layout.LayoutStyle.RELATED)
-      .add(jButtonOK)))
-      .addContainerGap())
-      );
-      
-      layout.linkSize(new java.awt.Component[] {jButtonApply, jButtonCancel, jButtonOK}, org.jdesktop.layout.GroupLayout.HORIZONTAL);
-      
-      layout.setVerticalGroup(
-      layout.createParallelGroup(org.jdesktop.layout.GroupLayout.LEADING)
-      .add(layout.createSequentialGroup()
-      .addContainerGap()
-      .add(layout.createParallelGroup(org.jdesktop.layout.GroupLayout.BASELINE)
-      .add(jLabel1)
-      .add(jComboBoxOutputModule, org.jdesktop.layout.GroupLayout.PREFERRED_SIZE, org.jdesktop.layout.GroupLayout.DEFAULT_SIZE, org.jdesktop.layout.GroupLayout.PREFERRED_SIZE))
-      .addPreferredGap(org.jdesktop.layout.LayoutStyle.RELATED)
-      .add(jSplitPane, org.jdesktop.layout.GroupLayout.DEFAULT_SIZE, 622, Short.MAX_VALUE)
-      .addPreferredGap(org.jdesktop.layout.LayoutStyle.RELATED)
-      .add(layout.createParallelGroup(org.jdesktop.layout.GroupLayout.BASELINE)
-      .add(jButtonOK)
-      .add(jButtonApply)
-      .add(jButtonCancel))
-      .addContainerGap())
-      );
-      
-      return jPanel;
-      }
-    */
 
 
 
