@@ -1,3 +1,8 @@
+2008-09-30  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>
+
+	* tag V00-25-10
+	* fix OM dialog (reported by Tulika)
+
 2008-09-19  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>
 
 	* tag V00-25-09
